@@ -1,3 +1,7 @@
+2011-11-04 Felix Natter <fnatter@gmx.net>
+	* utf8.c: use MultiByteToWideChar() in widen() on Windows. This will
+	  convert to two-byte wchar_t which is what minGW + PDCurses support
+
 2011-10-30 Tim Marston <edam@waxworlds.org>
 
 	* gtypist.c, utf8.c/h, cursmenu.c: get_widech() uses ints to avoid
